current cmake list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(ENGINE_NAME mbengine)
 set(ENGINE_VERSION 1.0.0)
 
 # Set the source files for your engine
-set(ENGINE_SRCS mb_pkcs11_engine.c)
+set(ENGINE_SRCS mb_pkcs11_engine.c mb_pkcs11_engine_sha256.c)
 
 # Set the name of the test
 set(TEST_NAME pkcs11test)
@@ -20,6 +20,7 @@ set(TEST_NAME pkcs11test)
 # find_package(OpenSSL REQUIRED)
 
 set(OPENSSL_INCLUDE_DIR "/usr/local/include")
+# set(OPENSSL_INCLUDE_DIR "/home/glaum/curl/openssl-1.1.1b/include")
 set(OPENSSL_CRYPTO_LIBRARY "/home/glaum/openssl/libcrypto.so")
 set(OPENSSL_SSL_LIBRARY "/home/glaum/openssl/libssl.so")
 
@@ -27,9 +28,23 @@ message("OpenSSL_INCLUDE_DIRS: ${OPENSSL_INCLUDE_DIR}")
 message("OpenSSL_CRYPTO_LIB: ${OPENSSL_CRYPTO_LIBRARY}")
 message("OpenSSL_SSL_LIB: ${OPENSSL_SSL_LIBRARY}")
 
+
+# Create a shared library for engine implementation
+set(ENGINE_IMPL_NAME mbengineimpl)
+
+# Set the source files for your engine
+set(ENGINE_IMPL_SRCS engine_link.cpp)
+
+add_library(${ENGINE_IMPL_NAME} SHARED ${ENGINE_IMPL_SRCS})
+target_include_directories(${ENGINE_IMPL_NAME} PRIVATE ${OPENSSL_INCLUDE_DIR})
+target_link_libraries(${ENGINE_IMPL_NAME} PRIVATE ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
+target_compile_options(${ENGINE_IMPL_NAME} PUBLIC -Wunused-parameter)
+
+
+
+
 # Create a shared library for your engine
 add_library(${ENGINE_NAME} SHARED ${ENGINE_SRCS})
-target_include_directories(${ENGINE_NAME} PRIVATE )
 
 # Surpress warnings
 target_compile_options(${ENGINE_NAME} PUBLIC -Wdeprecated-declarations -Wimplicit-function-declaration)
@@ -39,10 +54,42 @@ set_target_properties(${ENGINE_NAME} PROPERTIES VERSION ${ENGINE_VERSION})
 
 # Link against OpenSSL
 target_include_directories(${ENGINE_NAME} PRIVATE ${OPENSSL_INCLUDE_DIR})
-target_link_libraries(${ENGINE_NAME} PRIVATE ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
+target_link_libraries(${ENGINE_NAME} PRIVATE ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY} ${ENGINE_IMPL_NAME})
 
-# Create the test file
-add_executable(${TEST_NAME} pkcs11_engine_test.cpp)
-target_include_directories(${TEST_NAME} PRIVATE ${OPENSSL_INCLUDE_DIR})
-target_link_libraries(${TEST_NAME} PRIVATE ${ENGINE_NAME} ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
 
+set(CURL_LIBRARY "/home/glaum/curl/curl-7.68.0/lib/.libs/libcurl.so")
+set(CURL_INCLUDE "/home/glaum/curl/curl-7.68.0/include")
+message("CURL_INCLUDE_DIRS: ${CURL_INCLUDE}")
+
+add_executable(${TEST_NAME} curl_example.cpp)
+target_link_libraries(${TEST_NAME} ${CURL_LIBRARY} ${ENGINE_NAME} ${ENGINE_IMPL_NAME} ${OPENSSL_CRYPTO_LIBRARY} ${OPENSSL_SSL_LIBRARY})
+target_include_directories(${TEST_NAME} PRIVATE ${CURL_INCLUDE} ${OPENSSL_INCLUDE_DIR})
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(engine_test test.cpp)
+target_link_libraries(
+    engine_test
+    GTest::gtest_main
+    ${ENGINE_NAME} 
+    ${ENGINE_IMPL_NAME} 
+    ${OPENSSL_CRYPTO_LIBRARY} 
+    ${OPENSSL_SSL_LIBRARY}
+)
+target_include_directories(
+    engine_test PRIVATE 
+    ${CURL_INCLUDE} 
+    ${OPENSSL_INCLUDE_DIR})
+
+
+include(GoogleTest)
+gtest_discover_tests(engine_test)
