--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,8 @@ set(ENGINE_IMPL_SRCS
   engine_link_digests.cpp 
   engine_link_sym_ciphers.cpp 
   engine_link_pkey.cpp
-  engine_link_ecdsa.cpp)
+  engine_link_ecdsa_copy.cpp
+)
 
 add_library(${ENGINE_IMPL_NAME} SHARED ${ENGINE_IMPL_SRCS})
 target_include_directories(${ENGINE_IMPL_NAME} PRIVATE ${OPENSSL_INCLUDE_DIR})
